// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusTrendCard > Visual Regression > matches error type snapshot 1`] = `
<div>
  <div
    aria-label="Test Metric: 85.5%"
    class="rounded-2xl bg-white shadow-sm ring-1 ring-gray-200 p-4 w-full max-w-sm dark:bg-gray-800 dark:ring-gray-700 dark:shadow-none"
    role="status"
  >
    <div
      class="flex items-start justify-between mb-2"
    >
      <h3
        class="text-sm font-medium text-gray-900 dark:text-gray-100"
      >
        Test Metric
      </h3>
      <div
        class="flex items-center text-xs font-medium text-green-600"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trending-up w-4 h-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 7h6v6"
          />
          <path
            d="m22 7-8.5 8.5-5-5L2 17"
          />
        </svg>
        5.2
        %
      </div>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="relative w-16 h-16 flex items-center justify-center"
      >
        <div
          class="recharts-wrapper"
          style="position: relative; cursor: default; width: 64px; height: 64px;"
        >
          <svg
            class="recharts-surface"
            cx="50%"
            cy="50%"
            height="64"
            style="width: 100%; height: 100%;"
            viewBox="0 0 64 64"
            width="64"
          >
            <title />
            <desc />
            <defs>
              <clippath
                id="recharts35-clip"
              >
                <rect
                  height="54"
                  width="54"
                  x="5"
                  y="5"
                />
              </clippath>
            </defs>
            <g
              class="recharts-layer recharts-pie"
              tabindex="0"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
              </g>
            </g>
          </svg>
        </div>
        <span
          class="absolute text-sm font-medium text-red-500 dark:text-red-400"
        >
          85.5%
        </span>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs text-gray-500 dark:text-gray-400 mb-1"
        >
          son 24 saat
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatusTrendCard > Visual Regression > matches info type snapshot 1`] = `
<div>
  <div
    aria-label="Test Metric: 85.5%"
    class="rounded-2xl bg-white shadow-sm ring-1 ring-gray-200 p-4 w-full max-w-sm dark:bg-gray-800 dark:ring-gray-700 dark:shadow-none"
    role="status"
  >
    <div
      class="flex items-start justify-between mb-2"
    >
      <h3
        class="text-sm font-medium text-gray-900 dark:text-gray-100"
      >
        Test Metric
      </h3>
      <div
        class="flex items-center text-xs font-medium text-green-600"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trending-up w-4 h-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 7h6v6"
          />
          <path
            d="m22 7-8.5 8.5-5-5L2 17"
          />
        </svg>
        5.2
        %
      </div>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="relative w-16 h-16 flex items-center justify-center"
      >
        <div
          class="recharts-wrapper"
          style="position: relative; cursor: default; width: 64px; height: 64px;"
        >
          <svg
            class="recharts-surface"
            cx="50%"
            cy="50%"
            height="64"
            style="width: 100%; height: 100%;"
            viewBox="0 0 64 64"
            width="64"
          >
            <title />
            <desc />
            <defs>
              <clippath
                id="recharts29-clip"
              >
                <rect
                  height="54"
                  width="54"
                  x="5"
                  y="5"
                />
              </clippath>
            </defs>
            <g
              class="recharts-layer recharts-pie"
              tabindex="0"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
              </g>
            </g>
          </svg>
        </div>
        <span
          class="absolute text-sm font-medium text-blue-500 dark:text-blue-400"
        >
          85.5%
        </span>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs text-gray-500 dark:text-gray-400 mb-1"
        >
          son 24 saat
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatusTrendCard > Visual Regression > matches snapshot with custom formatting 1`] = `
<div>
  <div
    aria-label="Test Metric: 85.5ms"
    class="rounded-2xl bg-white shadow-sm ring-1 ring-gray-200 p-4 w-full max-w-sm dark:bg-gray-800 dark:ring-gray-700 dark:shadow-none"
    role="status"
  >
    <div
      class="flex items-start justify-between mb-2"
    >
      <h3
        class="text-sm font-medium text-gray-900 dark:text-gray-100"
      >
        Test Metric
      </h3>
      <div
        class="flex items-center text-xs font-medium text-green-600"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trending-up w-4 h-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 7h6v6"
          />
          <path
            d="m22 7-8.5 8.5-5-5L2 17"
          />
        </svg>
        5.2
        %
      </div>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="relative w-16 h-16 flex items-center justify-center"
      >
        <div
          class="recharts-wrapper"
          style="position: relative; cursor: default; width: 64px; height: 64px;"
        >
          <svg
            class="recharts-surface"
            cx="50%"
            cy="50%"
            height="64"
            style="width: 100%; height: 100%;"
            viewBox="0 0 64 64"
            width="64"
          >
            <title />
            <desc />
            <defs>
              <clippath
                id="recharts37-clip"
              >
                <rect
                  height="54"
                  width="54"
                  x="5"
                  y="5"
                />
              </clippath>
            </defs>
            <g
              class="recharts-layer recharts-pie"
              tabindex="0"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
              </g>
            </g>
          </svg>
        </div>
        <span
          class="absolute text-sm font-medium text-blue-500 dark:text-blue-400"
        >
          85.5ms
        </span>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs text-gray-500 dark:text-gray-400 mb-1"
        >
          son 24 saat
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatusTrendCard > Visual Regression > matches success type snapshot 1`] = `
<div>
  <div
    aria-label="Test Metric: 85.5%"
    class="rounded-2xl bg-white shadow-sm ring-1 ring-gray-200 p-4 w-full max-w-sm dark:bg-gray-800 dark:ring-gray-700 dark:shadow-none"
    role="status"
  >
    <div
      class="flex items-start justify-between mb-2"
    >
      <h3
        class="text-sm font-medium text-gray-900 dark:text-gray-100"
      >
        Test Metric
      </h3>
      <div
        class="flex items-center text-xs font-medium text-green-600"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trending-up w-4 h-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 7h6v6"
          />
          <path
            d="m22 7-8.5 8.5-5-5L2 17"
          />
        </svg>
        5.2
        %
      </div>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="relative w-16 h-16 flex items-center justify-center"
      >
        <div
          class="recharts-wrapper"
          style="position: relative; cursor: default; width: 64px; height: 64px;"
        >
          <svg
            class="recharts-surface"
            cx="50%"
            cy="50%"
            height="64"
            style="width: 100%; height: 100%;"
            viewBox="0 0 64 64"
            width="64"
          >
            <title />
            <desc />
            <defs>
              <clippath
                id="recharts31-clip"
              >
                <rect
                  height="54"
                  width="54"
                  x="5"
                  y="5"
                />
              </clippath>
            </defs>
            <g
              class="recharts-layer recharts-pie"
              tabindex="0"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
              </g>
            </g>
          </svg>
        </div>
        <span
          class="absolute text-sm font-medium text-green-500 dark:text-green-400"
        >
          85.5%
        </span>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs text-gray-500 dark:text-gray-400 mb-1"
        >
          son 24 saat
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatusTrendCard > Visual Regression > matches warning type snapshot 1`] = `
<div>
  <div
    aria-label="Test Metric: 85.5%"
    class="rounded-2xl bg-white shadow-sm ring-1 ring-gray-200 p-4 w-full max-w-sm dark:bg-gray-800 dark:ring-gray-700 dark:shadow-none"
    role="status"
  >
    <div
      class="flex items-start justify-between mb-2"
    >
      <h3
        class="text-sm font-medium text-gray-900 dark:text-gray-100"
      >
        Test Metric
      </h3>
      <div
        class="flex items-center text-xs font-medium text-green-600"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trending-up w-4 h-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 7h6v6"
          />
          <path
            d="m22 7-8.5 8.5-5-5L2 17"
          />
        </svg>
        5.2
        %
      </div>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="relative w-16 h-16 flex items-center justify-center"
      >
        <div
          class="recharts-wrapper"
          style="position: relative; cursor: default; width: 64px; height: 64px;"
        >
          <svg
            class="recharts-surface"
            cx="50%"
            cy="50%"
            height="64"
            style="width: 100%; height: 100%;"
            viewBox="0 0 64 64"
            width="64"
          >
            <title />
            <desc />
            <defs>
              <clippath
                id="recharts33-clip"
              >
                <rect
                  height="54"
                  width="54"
                  x="5"
                  y="5"
                />
              </clippath>
            </defs>
            <g
              class="recharts-layer recharts-pie"
              tabindex="0"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
                <g
                  class="recharts-layer recharts-pie-sector"
                  tabindex="-1"
                />
              </g>
            </g>
          </svg>
        </div>
        <span
          class="absolute text-sm font-medium text-yellow-500 dark:text-yellow-400"
        >
          85.5%
        </span>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs text-gray-500 dark:text-gray-400 mb-1"
        >
          son 24 saat
        </p>
      </div>
    </div>
  </div>
</div>
`;
